5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4155/executions/1593_1802.log
== TEST (2019-03-27 19:37:45) 
-- CODE:
from <math> import *
d1 = int(input("dado1: "))
d2 = int(input("dado2: ")
a = float(input("life: "))
b = d1 + d2 
			
d = sqrt(5 * d1) + pi ** d2 / 3
r = a - d
print(r)


-- ERROR:
File "XXXX", line 1
    from <math> import *
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:37:53) 
-- CODE:
from <math> import *

d1 = int(input("dado1: "))
d2 = int(input("dado2: ")
a = float(input("life: "))
b = d1 + d2 
			
d = sqrt(5 * d1) + pi ** d2 / 3
r = a - d
print(r)


-- ERROR:
File "XXXX", line 1
    from <math> import *
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:38:04) 
-- CODE:
from <math> import*

d1 = int(input("dado1: "))
d2 = int(input("dado2: ")
a = float(input("life: "))
b = d1 + d2 
			
d = sqrt(5 * d1) + pi ** d2 / 3
r = a - d
print(r)


-- ERROR:
File "XXXX", line 1
    from <math> import*
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:38:53) 
-- CODE:
from math import*

d1 = int(input("dado1: "))
d2 = int(input("dado2: ")
a = float(input("life: "))
b = d1 + d2 
			
d = sqrt(5 * d1) + pi ** d2 / 3
r = a - d
print(r)


-- ERROR:
File "XXXX", line 5
    a = float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:39:06) 
-- CODE:
from math import*

d1 = int(input("dado1: "))
d2 = int(input("dado2: ")
a = int(input("life: "))
b = d1 + d2 
			
d = sqrt(5 * d1) + pi ** d2 / 3
r = a - d
print(r)


-- ERROR:
File "XXXX", line 5
    a = int(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:39:55) 
-- CODE:
from math import*

d1 = int(input("dado1: "))
d2 = int(input("dado2: "))
a = int(input("life: "))
b = d1 + d2 
			
d = sqrt(5 * d1) + pi ** d2 / 3
r = a - d
print(r)


-- OUTPUT:
-26.669974152880393
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 19:40:08) 
-- CODE:
from math import*

d1 = int(input("dado1: "))
d2 = int(input("dado2: "))
a = int(input("life: "))
b = d1 + d2 
			
d = sqrt(5 * d1) + pi ** d2 / 3
r = a - d
print(r)


-- EXECUTION TIME:
0.160809
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
-26.669974152880393
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
-353.19289798717557
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
-50.0471975511966
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:40:11) 
-- CODE:
from math import*

d1 = int(input("dado1: "))
d2 = int(input("dado2: "))
a = int(input("life: "))
b = d1 + d2 
			
d = sqrt(5 * d1) + pi ** d2 / 3
r = a - d
print(r)


-- OUTPUT:
-26.669974152880393
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:42:01) 
-- CODE:
from math import*

a = int(input("life: "))
d1 = int(input("dado1: "))
d2 = int(input("dado2: "))

			
d = sqrt(5 * d1) + pi ** d2 / 3
r = a - d
print(r)



-- OUTPUT:
-122.69913250260117
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:44:32) 
-- CODE:
from math import*

a = int(input("life: "))
d1 = int(input("dado1: "))
d2 = int(input("dado2: "))

			
d = sqrt(5 * d1) + pi ** d2 / 3
r = a - d
print(int(r)



-- ERROR:
File "XXXX", line 13
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:44:43) 
-- CODE:
from math import*

a = int(input("life: "))
d1 = int(input("dado1: "))
d2 = int(input("dado2: "))

			
d = sqrt(5 * d1) + pi ** d2 / 3
r = a - d

print(int(r)



-- ERROR:
File "XXXX", line 14
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:44:57) 
-- CODE:
from math import*

a = int(input("life: "))
d1 = int(input("dado1: "))
d2 = int(input("dado2: "))

			
d = sqrt(5 * d1) + pi ** d2 / 3
r = a - d

print(int(input(r)



-- ERROR:
File "XXXX", line 14
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:45:14) 
-- CODE:
from math import*

a = int(input("life: "))
d1 = int(input("dado1: "))
d2 = int(input("dado2: "))
d = sqrt(5 * d1) + pi ** d2 / 3
r = a - d
print(int(input(r)



-- ERROR:
File "XXXX", line 11
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:45:21) 
-- CODE:
from math import*
a = int(input("life: "))
d1 = int(input("dado1: "))
d2 = int(input("dado2: "))
d = sqrt(5 * d1) + pi ** d2 / 3
r = a - d
print(int(input(r)



-- ERROR:
File "XXXX", line 10
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:45:33) 
-- CODE:
from math import*

a = int(input("life: "))
d1 = int(input("dado1: "))
d2 = int(input("dado2: "))

d = sqrt(5 * d1) + pi ** d2 / 3
r = a - d

print(int(input(r)



-- ERROR:
File "XXXX", line 13
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:45:41) 
-- CODE:
from math import*

a = int(input("life: "))
d1 = int(input("dado1: "))
d2 = int(input("dado2: "))

d = sqrt(5 * d1) + pi ** d2 / 3
r = a - d

print(r)



-- OUTPUT:
-122.69913250260117
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:45:59) 
-- CODE:
from math import*

a = int(input("life: "))
d1 = int(input("dado1: "))
d2 = int(input("dado2: "))

d = sqrt(5 * d1) + pi ** d2 // 3
r = a - d

print(r)



-- OUTPUT:
-122.23606797749977
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:07:04) 
-- CODE:
from math import*

a = int(input("life: "))
d1 = int(input("dado1: "))
d2 = int(input("dado2: "))

d = sqrt(5 * d1) + pi ** d2 // 3
r = a - d

print(r)



-- OUTPUT:
-122.23606797749977
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:07:28) 
-- CODE:
from math import*

a = int(input("life: "))
d1 = int(input("dado1: "))
d2 = int(input("dado2: "))

d = sqrt(5 * d1) + pi ** d2 // 3
r = a - d

print(r)



-- OUTPUT:
-122.23606797749977
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:08:07) 
-- CODE:
from math import*

a = int(input("life: "))
d1 = int(input("dado1: "))
d2 = int(input("dado2: "))

d = int(sqrt(5 * d1) + pi ** d2 // 3)
r = a - d

print(r)



-- OUTPUT:
-122
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:08:37) 
-- CODE:
from math import*

a = int(input("life: "))
d1 = int(input("dado1: "))
d2 = int(input("dado2: "))

d = int(sqrt(5 * d1) + pi ** d2 // 3)
r = a - d

print(d)



-- OUTPUT:
322
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:09:47) 
-- CODE:
from math import*

a = int(input("life: "))
d1 = int(input("dado1: "))
d2 = int(input("dado2: "))

d = int(sqrt(5 * d1) + pi ** (d2 // 3)
r = a - d

print(d)



-- ERROR:
File "XXXX", line 8
    r = a - d
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:09:59) 
-- CODE:
from math import*

a = int(input("life: "))
d1 = int(input("dado1: "))
d2 = int(input("dado2: "))

d = int(sqrt(5 * d1) + pi ** (d2 // 3))
r = a - d

print(r)



-- OUTPUT:
188
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:10:14) 
-- CODE:
from math import*

a = int(input("life: "))
d1 = int(input("dado1: "))
d2 = int(input("dado2: "))

d = int(sqrt(5 * d1) + pi ** (d2 / 3))
r = a - d

print(r)



-- OUTPUT:
188
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:10:23) 
-- CODE:
from math import*

a = int(input("life: "))
d1 = int(input("dado1: "))
d2 = int(input("dado2: "))

d = int(sqrt(5 * d1) + pi ** (d2 / 3))
r = a - d

print(r)



-- EXECUTION TIME:
0.203417
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
188
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
285
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
